// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_COMPONENT_EDIT_FAIL 1`] = `
Object {
  "error": "Error: failed to update component.",
  "item": Object {},
  "loading": false,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_COMPONENT_EDIT_LOADING 1`] = `
Object {
  "error": null,
  "item": Object {},
  "loading": true,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_COMPONENT_EDIT_SUCCESS 1`] = `
Object {
  "error": null,
  "item": Object {
    "field_scenes": Array [
      Object {
        "field_components": Array [
          Object {
            "field_body": "test body",
            "field_x": 0,
            "field_y": 0,
            "field_z": 0,
            "id": 10,
            "title": "My New Slug",
          },
        ],
        "field_slug": "testScene",
      },
    ],
  },
  "loading": false,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_COMPONENT_FIELD_PRESAVE_SUCCESS 1`] = `
Object {
  "error": null,
  "item": Object {
    "field_scenes": Array [
      Object {
        "field_components": Array [
          Object {
            "id": "testComponent",
            "title": "My New Value",
          },
        ],
        "field_slug": "testScene",
      },
    ],
  },
  "loading": false,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_FETCH_FOR_USER_FAIL 1`] = `
Object {
  "error": "Error: failed to fetch experiences.",
  "item": Object {},
  "loading": false,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_FETCH_FOR_USER_LOADING 1`] = `
Object {
  "error": null,
  "item": Object {},
  "loading": true,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_FETCH_FOR_USER_SUCCESS 1`] = `
Object {
  "error": null,
  "item": Object {
    "id": 1,
    "title": "example experience",
  },
  "loading": false,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_SCENE_CREATE_FAIL 1`] = `
Object {
  "error": "Error: failed to create scene.",
  "item": Object {},
  "loading": false,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_SCENE_CREATE_LOADING 1`] = `
Object {
  "error": null,
  "item": Object {},
  "loading": true,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_SCENE_CREATE_SUCCESS 1`] = `
Object {
  "error": null,
  "item": Object {},
  "loading": false,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_SCENE_EDIT_FAIL 1`] = `
Object {
  "error": "Error: failed to update scene.",
  "item": Object {},
  "loading": false,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_SCENE_EDIT_LOADING 1`] = `
Object {
  "error": null,
  "item": Object {},
  "loading": true,
}
`;

exports[`reducers->openExperience Should handle OPEN_EXPERIENCE_SCENE_EDIT_SUCCESS 1`] = `
Object {
  "error": null,
  "item": Object {
    "field_scenes": Array [
      Object {
        "body": "test description",
        "field_slug": "my-test",
        "title": "test",
      },
    ],
  },
  "loading": false,
}
`;

exports[`reducers->openExperience Should return the initial state by default 1`] = `
Object {
  "error": null,
  "item": Object {},
  "loading": false,
}
`;
